--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "sass": "^1.57.1",
     "vite-svg-loader": "^4.0.0",
     "vue": "^3.2.45",
-    "vue-router": "^4.1.6"
+    "vue-router": "^4.1.6",
+    "vue3-burger-menu": "^1.1.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
