--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "vite-svg-loader": "^4.0.0",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6",
-    "vue3-burger-menu": "^1.1.1"
+    "vue3-burger-menu": "^1.1.1",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
